--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                 <form id="contact-form">
                     <input type="hidden" name="contact_number">
                     <div class="form-block" data-form-block>
-                        <input class="fld" id="name" type="text" data-fld>
+                        <input class="fld" id="name" type="text" data-fld value="Иван">
                         <label class="lbl" for="name">Имя</label>
                     </div>
 
                     <div class="form-block" data-form-block>
-                        <textarea class="fld textarea" id="txt"  rows="5" data-fld></textarea>
+                        <textarea class="fld textarea" id="txt"  rows="5" data-fld>Привет</textarea>
                         <label class="lbl" for="txt">Сообщение</label>
                     </div>
 
