--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
         </section>
 
         <section class="about">
-            <h2>Обо мне</h2>
+            <h2>Всем привет!</h2>
             <p>Я занимаюсь разработкой Front-end приложений, вёрсткой и обслуживанием сайтов.</p>
             <p>Мне нравится превращать сложные задачи в простые, красивые и интуитивно понятные конструкции.</p>
             <p>Когда я не пишу код, я играю на гитаре, жарю мясо или уделяю время семье.</p>
+            <p>C 2018 года работаю в компании "EvoPlay"</p>
+            <p>Мне нравятся интересные задачи и находить интересные решения для них</p>
+            <p>В компании я стараюсь проявлять свои софт-скилы</p>
+            <p>Провожу доклады и стараюсь быть нужным</p>
 
             <h2 class="facts-header">Случайные факты:</h2>
             <ul class="facts" data-facts></ul>
@@ -38,14 +42,21 @@
 
             <h2>Мои работы</h2>
 
-            <div class="wrapper">
-                <button data-works-name="show-all">SHOW ALL</button>
-                <button data-works-name="sass">SASS</button>
-                <button data-works-name="less">LESS</button>
-                <button data-works-name="nodejs">NODEJS</button>
-                <button data-works-name="react">REACT</button>
-                <button data-works-name="canvas">CANVAS</button>
-            </div>
+<!--            <p>Так как в компании "EvoPlay" я подписал NDA(договор о неразглашении) мне придётся сюда выложить свои курсовые работы</p>-->
+
+            <ul class="wrapper"></ul>
+        </section>
+
+        <section class="pokedex">
+            <h2>Pokedex</h2>
+
+
+        </section>
+
+        <section class="thanos-effect">
+            <h2>Thanos Effect</h2>
+
+
         </section>
 
         <section class="contacts">
@@ -79,6 +90,7 @@
             <!-- интересная кнопка https://codepen.io/sean_codes/pen/EWJyqe -->
         </section>
 
+        <!-- performances -->
         <section class="performances">
             <h2>Мои доклады</h2>
             <h3 class="nav-menu">
@@ -87,24 +99,42 @@
             </h3>
         </section>
 
-        <section class="regexp">
+        <section class="report regexp">
             <h2>Не бойтесь регулярных выражений</h2>
-            <video src=""></video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZJw-nqtDrWc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>Полезные ссылки</h2>
+            <div class="hrefs">
+                <a href="https://ru.wikipedia.org/wiki/%D0%A0%D0%B5%D0%B3%D1%83%D0%BB%D1%8F%D1%80%D0%BD%D1%8B%D0%B5_%D0%B2%D1%8B%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F" target="_blank">Регулярные выражения на википедии</a>
+                <a href="https://regexr.com/" target="_blank">https://regexr.com/</a>
+                <a href="https://regex101.com/" target="_blank">https://regex101.com/</a>
+                <a href="https://learn.javascript.ru/regular-expressions" target="_blank">Учебник по регулярным выражениям на learn.javascript.ru</a>
+                <a href="https://www.exlab.net/files/tools/sheets/regexp/regexp.png" target="_blank">Шпаргалка по регулярным выражениям</a>
+            </div>
         </section>
 
-        <section class="accessibility">
-            
+        <section class="report accessibility">
+            <h2>Разработка доступных интерфейсов</h2>
+            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/c1W9u6SN2Cw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h2>Ссылка на доклад</h2>
+            <a href="https://developing-accessible-interfaces.netlify.app/" target="_blank">https://developing-accessible-interfaces.netlify.app/</a>
         </section>
 
         <button class="back-button" data-href="main-page">
-            <p>Назад</p>
+            <p>Иван</p>
             <canvas id="back-btn"></canvas>
         </button>
     </div>
 
     <script src="./js/TweenMax.min.js"></script>
+    <script src="./js/Router.js"></script>
+    <script src="./js/myWorks.js"></script>
+    <script src="./js/navigation.js"></script>
+    <script src="./js/formManager.js"></script>
+    <script src="./js/randomFacts.js"></script>
+    <script src="./js/sendForm.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/fluid.js"></script>
     <script src="./js/back-btn.js"></script>
+
 </body>
 </html>
