add works, favicon and manifest

--- a/index.html
+++ b/index.html
@@ -144,9 +144,8 @@
             <p>Пользователь может перейти на страницу проектов (здесь будут жить все лучшие проекты с описанием используемых технологий и ссылками на Github и живые видеодемонстрации).</p>
             <p>Пользователь может перейти на страницу «контакты» и связаться со мной.</p>
             <p>Пользователь может перейти на страницу моих докладов и почерпнуть те знания которыми я делюсь с другими.</p>
-            <p>В начале написания кода я думал, каким стэком будет обладать мой сайт портфолио. Я очень хотел написать его на React но поймите меня правильно во время написания кода я владел базовыми знаниями React и вполне достаточными знаниями ES6. Я понимал, что мне нужно настраивать и добавлять функции так, что бы это демонстрировало мои навыки в программировании.</p>
-            <p>Основная цель этого веб-сайта-портфолио - продемонстрировать проекты, которые я создал, ну и конечно же сам сайт также считается проектом! Это страница моих проектов, на которой представлены проекты, созданные мной:</p>
-            <img src="./img/my-works.png" alt="Фото страницы мои работы">
+            <p>В начале написания кода я думал, каким стэком будет обладать мой сайт портфолио. Я очень хотел написать его на React но поймите меня правильно во время написания кода я владел базовыми знаниями React и вполне достаточными знаниями ES6. Я понимал, что мне нужно настраивать и добавлять функции так, что бы это демонстрировало мои навыки в программировании. Поэтому я написал его на нативном JS</p>
+            <p>Основная цель этого веб-сайта-портфолио - продемонстрировать проекты, которые я создал, ну и конечно же сам сайт также считается проектом! </p>
 
             <a href="" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 500">
