--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link rel="mask-icon" href="./img/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#b91d47">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="./styles/preloader.css">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/preloader.css">
+    <link rel="stylesheet" href="./styles/download.css">
     <script type="text/javascript" src="./js/email.min.js"></script>
     <title>Ivan Portfolio</title>
 </head>
 <body>
-<!-- кнопка назад https://codepen.io/corentinfardeau/pen/wzpXBQ -->
     <div class="wrapper" data-nav-wrapper="loader">
         <section class="main-page">
             <canvas id="fluid"></canvas>
@@ -62,6 +62,15 @@
 
                 <h2 class="facts-header">Случайные факты:</h2>
                 <ul class="facts" data-facts></ul>
+
+                <a href="./files/CV_Golovko_Ivan.docx" class="download" download="CV_Golovko_Ivan.docx">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span class="star-blink"><div></div></span>
+                    скачать резюме
+                </a>
             </div>
         </section>
         <!-- My works -->
@@ -131,7 +140,9 @@
         <section class="work thanos-effect">
             <div class="container">
                 <h2>Thanos Effect</h2>
-
+                <video loop autoplay muted poster="./img/thanos.jpg">
+                    <source src="./video/effectThanos.mp4">
+                </video>
                 <p>Работая в EvoPlay мне поступила задача: воспроизвести эфект Таноса.</p>
                 <p>Что нужно сделать?</p>
                 <p>Нужно сделать распад картинок, как в фильме Мстители 3: Война бесконечности. Картинки должны распадаться на пепел и разлетаться по ветру.</p>
@@ -360,14 +371,15 @@
                     <div class="preloader__sector"></div>
                 </div>
             </div>
+            <div class="progress">Подождите немного, идёт загрузка: <span data-progress>0%</span></div>
         </section>
 
     </div>
 
     <script src="./js/TweenMax.min.js"></script>
     <script src="./js/Router.js"></script>
-    <script src="./js/myWorks.js"></script>
     <script src="./js/navigation.js"></script>
+    <script src="./js/myWorks.js"></script>
     <script src="./js/formManager.js"></script>
     <script src="./js/randomFacts.js"></script>
     <script src="./js/sendForm.js"></script>
