--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
         <section class="report regexp">
             <h2>Не бойтесь регулярных выражений</h2>
-            <iframe width="560" height="315" src="&origin=https://www.youtube.com/embed/ZJw-nqtDrWc&origin=https://golovko-ivan.netlify.app" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZJw-nqtDrWc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2>Полезные ссылки</h2>
             <div class="hrefs">
                 <a href="https://ru.wikipedia.org/wiki/%D0%A0%D0%B5%D0%B3%D1%83%D0%BB%D1%8F%D1%80%D0%BD%D1%8B%D0%B5_%D0%B2%D1%8B%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D1%8F" target="_blank">Регулярные выражения на википедии</a>
@@ -294,7 +294,7 @@
 
         <section class="report accessibility">
             <h2>Разработка доступных интерфейсов</h2>
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/c1W9u6SN2Cw&origin=https://golovko-ivan.netlify.app" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/c1W9u6SN2Cw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h2>Ссылка на доклад</h2>
             <a href="https://developing-accessible-interfaces.netlify.app/" target="_blank">https://developing-accessible-interfaces.netlify.app/</a>
         </section>
