add rotate stars into contacts page

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 <p>Сейчас я занимаюсь разработкой Front-end приложений, вёрсткой и обслуживанием сайтов.</p>
                 <p>Мне нравится превращать сложные задачи в простые, красивые и интуитивно понятные конструкции.</p>
                 <p>Когда я не пишу код, я играю на гитаре, жарю мясо или уделяю время семье.</p>
-                <p>C 2018 года работаю в компании "EvoPlay". В этой компании мне очень, всё нравится! Всегда есть интересные, необычные задачи.</p>
+                <p>C 2018 года работаю в компании "EvoPlay".</p>
                 <p>Мне нравятся интересные задачи и находить интересные решения для них</p>
                 <p>В компании я стараюсь проявлять свои софт-скилы</p>
                 <p>Провожу доклады и стараюсь быть нужным.</p>
-                <p>Сейчас я работаю с двумя стэками в одиних проэктах мы используем:</p>
+                <p>Сейчас я работаю с двумя стэками в Кор-проектах мы используем:</p>
                 <ul class="skills">
                     <li>HTML</li>
                     <li>Twig</li>
