--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h2 class="facts-header">Случайные факты:</h2>
                 <ul class="facts" data-facts></ul>
 
-                <a href="./files/CV_Golovko_Ivan.pdf" class="download" download="CV_Golovko_Ivan.docx">
+                <a href="./files/CV_Golovko_Ivan.pdf" class="download" download="CV_Golovko_Ivan.pdf">
                     <span></span>
                     <span></span>
                     <span></span>
