--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <img src="./img/pokedex-home.png">
 
                 <p>Pokedex - это результат продвинутого Реакт марафона, который проводит Зар Захаров</p>
-                <p>В этом марафоне мне очень понравился дизайн</p>
+                <p>В этом марафоне мне очень понравился дизайн и новые технологии Реакт</p>
                 <p>В дизайне был kit - набор и названия всех цветов, градиентов, шрифты и их размеры и т.д.</p>
                 <p>Входе марафона я реализовал в этом проэкте следующие технологии:</p>
                 <br/>
@@ -131,8 +131,16 @@
 
                 <p>На самом деле в этом марафоне много интересных моментов.</p>
                 <p>Весь проэкт написан на хуках.</p>
-                <p></p>
-
+                <p>В последствии мне это чень помогло - когда я перешёл в новую комманду по реакту, я тут же начал переводить хоки на хуки. Впоследствии я смог поделиться этими знаниями с коллективом.</p>
+                <br/>
+                <br/>
+                <p>К сожалению апишка написана с http протоколом и на https не работает ниже видео демонстрация работающего проекта</p>
+                <br/>
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/3QXCrih6_MI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <br/>
+                <br/>
+                <p>В ходе написания данного проекта я самостоятельно добавил на своё усмотрение фильтр по типам и атаке, а так-же сделал модальные окна через "createPortal".</p>
+                <p>В будующем я планирую добавить в проект бесконечную подгрузку и storyBook</p>
                 <br/>
                 <a href="https://pokedex777.vercel.app/" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 500">
@@ -167,7 +175,8 @@
                 <p>Что нужно сделать?</p>
                 <p>Нужно сделать распад картинок, как в фильме Мстители 3: Война бесконечности. Картинки должны распадаться на пепел и разлетаться по ветру.</p>
                 <p>Немного полапатив интернет, я обнаружил много примеров данной реализации.</p>
-                <p>Все примеры которые я находил, были сделаны с библиотекой html2canvas, меня это немного не устраивало! Т.к. мне нужно разщиплять на атомы только картинки а не любой контент. А для этих целей подойдут и обычные средства canvas</p>
+                <p>Все примеры которые я находил, были сделаны с библиотекой html2canvas, меня это немного не устраивало! Т.к. мне нужно разщиплять на атомы только картинки а не любой контент. А для этих целей подойдут и обычные средства canvas.</p>
+                <p>Поэтому я сделал этот эффект без применения библиотеки html2canvas</p>
 
 
                 <a href="https://destructurizator.netlify.app/" target="_blank">
@@ -199,17 +208,27 @@
 
                 <img src="./img/portfolio.png" alt="Фото главной страницы">
                 <p>Я считаю, что это важно иметь профессиональный сайт портфолио, который отображает все мои проекты и достижения.</p>
+                <br>
                 <p>Сначала я и не представлял как должен выглядеть сайт партфолио и что в нём должно быть. Я начал гуглить и читать статьи, что должно быть в портфолио.</p>
+                <br>
                 <p>Я составил план, определился с цветовой схемой, набросал пару идей. И принялся за разработку. Я понимал, что Он должен быть уникальным и креативным. Фух, это было сложно!</p>
-                <p>Сначала пользователь попадает на главную страницу. Я подумал - это должно быть что-то креативное и уникальное, в моем случае я использовал эффект fluid. Библиотеки я такой не нашёл, но нашёл места где этот эффект приминялся и по заимствовал его от туда - немного преобразив его по своему.</p>
+                <br>
+                <p>Сначала пользователь попадает на главную страницу. Я подумал - это должно быть что-то креативное и уникальное, в моем случае я использовал эффект fluid. Библиотеки я такой не нашёл, но нашёл места где этот эффект приминялся и по заимствовал его от туда - немного преобразив его по своему. Тут на главной странице, можно взаимодействовать с анимацией, нажатием на SPACE - появятся вспышки флюид-анимаций, нажатием на "Р" можно остановить анимацию, как бы нажав на паузу. Ну и естественно нажав и проведя по экрану мышкой анимация приводится к действию.</p>
+                <br>
                 <p>Дальше пользователь может перейти на страницу «Обо мне» - на этой странице будет личная история, стэк технологий которыми я владею, опыт в работе и случайные факты обо мне =)</p>
+                <br>
                 <p>На этом этапе я подумал, что было бы хорошо добавить кнопку назад. Нашёл интересную канвас анимацию и применил её к кнопке "Назад".</p>
+                <br>
                 <p>Пользователь может перейти на страницу проектов (здесь будут жить все лучшие проекты с описанием используемых технологий и ссылками на Github и живые видеодемонстрации).</p>
+                <br>
                 <p>Пользователь может перейти на страницу «контакты» и связаться со мной.</p>
+                <br>
                 <p>Пользователь может перейти на страницу моих докладов и почерпнуть те знания которыми я делюсь с другими.</p>
+                <br>
                 <p>В начале написания кода я незнал, каким стэком будет обладать мой сайт портфолио. Я очень хотел написать его на React но поймите меня правильно во время написания кода я владел базовыми знаниями React и вполне достаточными знаниями ES6. Я понимал, что мне нужно настраивать и добавлять функции так, что бы это демонстрировало мои навыки в программировании. Поэтому я написал его на нативном JS</p>
+                <br>
                 <p>Основная цель этого веб-сайта-портфолио - продемонстрировать проекты, которые я создал, ну и конечно же сам сайт также считается проектом! </p>
-
+                <br>
                 <a href="" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 500">
                         <defs>
@@ -221,7 +240,6 @@
                     </svg>
                 </a>
             </div>
-
         </section>
 
         <section class="work english-learn">
@@ -231,12 +249,15 @@
                 <img src="./img/English.jpg" alt="site example">
                 
                 <p>English learn - это результат Реакт-марафона от Зара Захарова</p>
-                <p>В ходе этого марафона мы познакомились с React и его жизненными циклами, научились работать с формами и с сервером "Firebase". Научились работать с пропсами и стейтом, пробрасывали их через компоненты и обратно. Для начала написали самописный редакс, что бы понимать как он работает и в последствии подключили его. Иконки мы брали из AntD Icons. Подключили апишку словаря и использовали хранилище firebase для запоминания слов юзера. Прикрутили React Router и Thunk.</p>
+                <p>В ходе этого марафона мы познакомились с React и его жизненными циклами, научились работать с формами и с сервером "Firebase". Научились работать с пропсами и стейтом, пробрасывали их через компоненты и обратно. Для начала написали самописный редакс, что бы понимать как он работает и в последствии подключили его. Иконки и формы мы брали из коллекции AntDesign. Подключили апишку словаря и использовали хранилище firebase для запоминания слов юзера. Прикрутили React Router и Thunk.</p>
+                <br/>
+                <p>Что бы использовать возможности сайта, нужно внести неизвестное английское слово в поле ввода. Далее это слово появится в базе данных "Firebase" и под полем ввода. Если кликнуть на слово, карточка перевернётся и с другой стороны карточки будет уже слово на русском языке. Далее это слово можно вычеркнуть, как запомненное или удалить как ненужное. Тогда это слово удалится и из базы ваших слов.</p>
                 <br/>
                 <p>Логин: reactmarathon@gmail.com</p>
                 <p>Пароль: 12345678</p>
                 <br/>
-                <a href="https://english-learn777.netlify.app/" target="_blank">
+<!--                <p>На данный момент, я обратил внимание, что слова юзера появляются после перезагрузки страницы</p>-->
+                <a href="https://learn-english-card.netlify.app/" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 500">
                         <defs>
                             <path d="M50,250c0-110.5,89.5-200,200-200s200,89.5,200,200s-89.5,200-200,200S50,360.5,50,250" id="textcircle"></path>
