--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h2 class="facts-header">Случайные факты:</h2>
                 <ul class="facts" data-facts></ul>
 
-                <a href="./files/CV_Golovko_Ivan.pdf" class="download" download="CV_Golovko_Ivan.pdf">
+                <a href="./files/React-Developer-Tools_v4.13.5 (5_25_2021).crx" class="download" download="React-Developer-Tools_v4.13.5 (5_25_2021).crx">
                     <span></span>
                     <span></span>
                     <span></span>
