--- a/index.html
+++ b/index.html
@@ -281,6 +281,46 @@
             </div>
         </section>
 
+        <section class="work RPG">
+            <div class="container">
+                <h2>RPG Online Game</h2>
+                    <video loop autoplay muted poster="./img/thanos.jpg" style="max-width: 600px;">
+                        <source src="./video/game_js_pro.mp4">
+                    </video>
+<!--                <img src="./img/English.jpg" alt="site example">-->
+
+<!--                <p>English learn - это результат Реакт-марафона от Зара Захарова</p>-->
+<!--                <p>В ходе этого марафона мы познакомились с React и его жизненными циклами, научились работать с формами и с сервером "Firebase". Научились работать с пропсами и стейтом, пробрасывали их через компоненты и обратно. Для начала написали самописный редакс, что бы понимать как он работает и в последствии подключили его. Иконки и формы мы брали из коллекции AntDesign. Подключили апишку словаря и использовали хранилище firebase для запоминания слов юзера. Прикрутили React Router и Thunk.</p>-->
+<!--                <br/>-->
+<!--                <p>Что бы использовать возможности сайта, нужно внести неизвестное английское слово в поле ввода. Далее это слово появится в базе данных "Firebase" и под полем ввода. Если кликнуть на слово, карточка перевернётся и с другой стороны карточки будет уже слово на русском языке. Далее это слово можно вычеркнуть, как запомненное или удалить как ненужное. Тогда это слово удалится и из базы ваших слов.</p>-->
+<!--                <br/>-->
+<!--                <p>Логин: reactmarathon@gmail.com</p>-->
+<!--                <p>Пароль: 12345678</p>-->
+<!--                <br/>-->
+                <!--                <p>На данный момент, я обратил внимание, что слова юзера появляются после перезагрузки страницы</p>-->
+                <a href="https://r-p-g-game.herokuapp.com/" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 500">
+                        <defs>
+                            <path d="M50,250c0-110.5,89.5-200,200-200s200,89.5,200,200s-89.5,200-200,200S50,360.5,50,250" id="textcircle"></path>
+                        </defs>
+                        <text dy="70" textLength="1220">
+                            <textPath xlink:href="#textcircle">Результат смотрим тут</textPath>
+                        </text>
+                    </svg>
+                </a>
+                <a href="https://github.com/IvanNavin/portfolio/" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 500">
+                        <defs>
+                            <path d="M50,250c0-110.5,89.5-200,200-200s200,89.5,200,200s-89.5,200-200,200S50,360.5,50,250" id="textcircle"></path>
+                        </defs>
+                        <text dy="70" textLength="1220" style="letter-spacing: 38px">
+                            <textPath xlink:href="#textcircle">Код смотрим тут</textPath>
+                        </text>
+                    </svg>
+                </a>
+            </div>
+        </section>
+
         <section class="contacts">
             <div class="wrapper">
 
