--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
+<!--    <link rel="preconnect" href="https://fonts.gstatic.com">-->
+    <link rel="apple-touch-icon" sizes="180x180" href="../src/img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../src/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../src/img/favicons/favicon-16x16.png">
 <!--    <link rel="manifest" href="./site.webmanifest">-->
-    <link rel="mask-icon" href="./img/favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#b91d47">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/preloader.css">
-    <link rel="stylesheet" href="./styles/download.css">
-    <script type="text/javascript" src="./js/email.min.js"></script>
+<!--    <link rel="mask-icon" href="../src/img/favicons/safari-pinned-tab.svg" color="#5bbad5">-->
+<!--    <meta name="msapplication-TileColor" content="#b91d47">-->
+<!--    <meta name="theme-color" content="#ffffff">-->
+<!--    <link rel="stylesheet" href="../src/styles/main.css">-->
+<!--    <link rel="stylesheet" href="../src/styles/preloader.css">-->
+<!--    <link rel="stylesheet" href="../src/styles/download.css">-->
+<!--    <script type="text/javascript" src="../src/js/email.min.js"></script>-->
     <title>Ivan Portfolio</title>
 </head>
 <body>
@@ -35,7 +35,7 @@
     <div class="wrapper" data-nav-wrapper="loader">
         <section class="main-page">
             <canvas id="fluid"></canvas>
-            <img src="./img/iam-wb-1.png" alt="in the photo Ivan in a blue shirt">
+            <img src="../src/img/iam-wb-1.png" alt="in the photo Ivan in a blue shirt">
 
             <h1 class="nav-menu" data-nav-menu></h1>
 
@@ -84,7 +84,7 @@
                 <h2 class="facts-header">Случайные факты:</h2>
                 <ul class="facts" data-facts></ul>
 
-                <a href="./files/React-Developer-Tools_v4.13.5 (5_25_2021).crx" class="download" download="React-Developer-Tools_v4.13.5 (5_25_2021).crx">
+                <a href="../src/files/React-Developer-Tools_v4.13.5%20(5_25_2021).crx" class="download" download="React-Developer-Tools_v4.13.5 (5_25_2021).crx">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -109,7 +109,7 @@
             <div class="container">
                 <h2>Pokedex</h2>
 
-                <img src="./img/pokedex-home.png">
+                <img src="../src/img/pokedex-home.png">
 
                 <p>Pokedex - это результат продвинутого Реакт марафона, который проводит Зар Захаров</p>
                 <p>В этом марафоне мне очень понравился дизайн и новые технологии Реакт</p>
@@ -169,8 +169,8 @@
         <section class="work thanos-effect">
             <div class="container">
                 <h2>Thanos Effect</h2>
-                <video loop autoplay muted poster="./img/thanos.jpg">
-                    <source src="./video/effectThanos.mp4">
+                <video loop autoplay muted poster="../src/img/thanos.jpg">
+                    <source src="../src/video/effectThanos.mp4">
                 </video>
                 <p>Работая в EvoPlay мне поступила задача: воспроизвести эфект Таноса.</p>
                 <p>Что нужно сделать?</p>
@@ -207,7 +207,7 @@
             <div class="container">
                 <h2>Portfolio</h2>
 
-                <img src="./img/portfolio.png" alt="Фото главной страницы">
+                <img src="../src/img/portfolio.png" alt="Фото главной страницы">
                 <p>Я считаю, что это важно иметь профессиональный сайт портфолио, который отображает все мои проекты и достижения.</p>
                 <br>
                 <p>Сначала я и не представлял как должен выглядеть сайт партфолио и что в нём должно быть. Я начал гуглить и читать статьи, что должно быть в портфолио.</p>
@@ -247,7 +247,7 @@
             <div class="container">
                 <h2>English learn</h2>
 
-                <img src="./img/English.jpg" alt="site example">
+                <img src="../src/img/English.jpg" alt="site example">
                 
                 <p>English learn - это результат Реакт-марафона от Зара Захарова</p>
                 <p>В ходе этого марафона мы познакомились с React и его жизненными циклами, научились работать с формами и с сервером "Firebase". Научились работать с пропсами и стейтом, пробрасывали их через компоненты и обратно. Для начала написали самописный редакс, что бы понимать как он работает и в последствии подключили его. Иконки и формы мы брали из коллекции AntDesign. Подключили апишку словаря и использовали хранилище firebase для запоминания слов юзера. Прикрутили React Router и Thunk.</p>
@@ -284,8 +284,8 @@
         <section class="work RPG">
             <div class="container">
                 <h2>RPG Online Game</h2>
-                    <video loop autoplay muted poster="./img/thanos.jpg" style="max-width: 600px;">
-                        <source src="./video/game_js_pro.mp4">
+                    <video loop autoplay muted poster="../src/img/thanos.jpg" style="max-width: 600px;">
+                        <source src="../src/video/game_js_pro.mp4">
                     </video>
 <!--                <img src="./img/English.jpg" alt="site example">-->
 
@@ -477,16 +477,16 @@
 
     </div>
 
-    <script src="./js/TweenMax.min.js"></script>
-    <script src="./js/myWorks.js"></script>
-    <script src="./js/Router.js"></script>
-    <script src="./js/navigation.js"></script>
-    <script src="./js/formManager.js"></script>
-    <script src="./js/randomFacts.js"></script>
-    <script src="./js/sendForm.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/fluid.js"></script>
-    <script src="./js/back-btn.js"></script>
+<!--    <script src="../src/js/TweenMax.min.js"></script>-->
+<!--    <script src="../src/js/myWorks.js"></script>-->
+<!--    <script src="../src/js/Router.js"></script>-->
+<!--    <script src="../src/js/navigation.js"></script>-->
+<!--    <script src="../src/js/formManager.js"></script>-->
+<!--    <script src="../src/js/randomFacts.js"></script>-->
+<!--    <script src="../src/js/sendForm.js"></script>-->
+<!--    <script src="../src/js/main.js"></script>-->
+<!--    <script src="../src/js/fluid.js"></script>-->
+<!--    <script src="../src/js/back-btn.js"></script>-->
 
 </body>
 </html>
