--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!--    <link rel="preconnect" href="https://fonts.gstatic.com">-->
-    <link rel="apple-touch-icon" sizes="180x180" href="../src/img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../src/img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../src/img/favicons/favicon-16x16.png">
-<!--    <link rel="manifest" href="./site.webmanifest">-->
-<!--    <link rel="mask-icon" href="../src/img/favicons/safari-pinned-tab.svg" color="#5bbad5">-->
-<!--    <meta name="msapplication-TileColor" content="#b91d47">-->
-<!--    <meta name="theme-color" content="#ffffff">-->
-<!--    <link rel="stylesheet" href="../src/styles/main.css">-->
-<!--    <link rel="stylesheet" href="../src/styles/preloader.css">-->
-<!--    <link rel="stylesheet" href="../src/styles/download.css">-->
-<!--    <script type="text/javascript" src="../src/js/email.min.js"></script>-->
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
     <title>Ivan Portfolio</title>
 </head>
 <body>
-    <!-- javascript:var t=((window.getSelection&&window.getSelection())||(document.getSelection&&document.getSelection())||(document.selection&&document.selection.createRange&&document.selection.createRange().text));var e=(document.charset||document.characterSet);if(t!=''){location.href='http://translate.google.com/?text='+t+'&hl=ru&langpair=auto|ru&tbb=1&ie='+e;}else{location.href='http://translate.google.com/translate?u='+encodeURIComponent(location.href)+'&hl=ru&langpair=auto|ru&tbb=1&ie='+e;}; -->
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display: none;">
         <symbol id="github" viewBox="0 0 24 24">
             <path id="github" fill="#fff" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
@@ -35,7 +25,7 @@
     <div class="wrapper" data-nav-wrapper="loader">
         <section class="main-page">
             <canvas id="fluid"></canvas>
-            <img src="../src/img/iam-wb-1.png" alt="in the photo Ivan in a blue shirt">
+            <img src="./img/iam-wb-1.png" alt="in the photo Holovko Ivan">
 
             <h1 class="nav-menu" data-nav-menu></h1>
 
@@ -84,7 +74,7 @@
                 <h2 class="facts-header">Случайные факты:</h2>
                 <ul class="facts" data-facts></ul>
 
-                <a href="../src/files/React-Developer-Tools_v4.13.5%20(5_25_2021).crx" class="download" download="React-Developer-Tools_v4.13.5 (5_25_2021).crx">
+                <a href="../cv/CV_Holovko_Ivan.pdf" class="download" download="CV_Holovko_Ivan.pdf">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -109,7 +99,7 @@
             <div class="container">
                 <h2>Pokedex</h2>
 
-                <img src="../src/img/pokedex-home.png">
+                <img src="./img/pokedex-home.png">
 
                 <p>Pokedex - это результат продвинутого Реакт марафона, который проводит Зар Захаров</p>
                 <p>В этом марафоне мне очень понравился дизайн и новые технологии Реакт</p>
@@ -170,7 +160,7 @@
             <div class="container">
                 <h2>Thanos Effect</h2>
                 <video loop autoplay muted poster="../src/img/thanos.jpg">
-                    <source src="../src/video/effectThanos.mp4">
+                    <source src="./video/effectThanos.mp4">
                 </video>
                 <p>Работая в EvoPlay мне поступила задача: воспроизвести эфект Таноса.</p>
                 <p>Что нужно сделать?</p>
@@ -207,7 +197,7 @@
             <div class="container">
                 <h2>Portfolio</h2>
 
-                <img src="../src/img/portfolio.png" alt="Фото главной страницы">
+                <img src="./img/portfolio.png" alt="Фото главной страницы">
                 <p>Я считаю, что это важно иметь профессиональный сайт портфолио, который отображает все мои проекты и достижения.</p>
                 <br>
                 <p>Сначала я и не представлял как должен выглядеть сайт партфолио и что в нём должно быть. Я начал гуглить и читать статьи, что должно быть в портфолио.</p>
@@ -247,7 +237,7 @@
             <div class="container">
                 <h2>English learn</h2>
 
-                <img src="../src/img/English.jpg" alt="site example">
+                <img src="./img/English.jpg" alt="site example">
                 
                 <p>English learn - это результат Реакт-марафона от Зара Захарова</p>
                 <p>В ходе этого марафона мы познакомились с React и его жизненными циклами, научились работать с формами и с сервером "Firebase". Научились работать с пропсами и стейтом, пробрасывали их через компоненты и обратно. Для начала написали самописный редакс, что бы понимать как он работает и в последствии подключили его. Иконки и формы мы брали из коллекции AntDesign. Подключили апишку словаря и использовали хранилище firebase для запоминания слов юзера. Прикрутили React Router и Thunk.</p>
@@ -285,9 +275,9 @@
             <div class="container">
                 <h2>RPG Online Game</h2>
                     <video loop autoplay muted poster="../src/img/thanos.jpg" style="max-width: 600px;">
-                        <source src="../src/video/game_js_pro.mp4">
+                        <source src="./video/game_js_pro.mp4">
                     </video>
-<!--                <img src="./img/English.jpg" alt="site example">-->
+
 
 <!--                <p>English learn - это результат Реакт-марафона от Зара Захарова</p>-->
 <!--                <p>В ходе этого марафона мы познакомились с React и его жизненными циклами, научились работать с формами и с сервером "Firebase". Научились работать с пропсами и стейтом, пробрасывали их через компоненты и обратно. Для начала написали самописный редакс, что бы понимать как он работает и в последствии подключили его. Иконки и формы мы брали из коллекции AntDesign. Подключили апишку словаря и использовали хранилище firebase для запоминания слов юзера. Прикрутили React Router и Thunk.</p>-->
@@ -476,17 +466,5 @@
         </section>
 
     </div>
-
-<!--    <script src="../src/js/TweenMax.min.js"></script>-->
-<!--    <script src="../src/js/myWorks.js"></script>-->
-<!--    <script src="../src/js/Router.js"></script>-->
-<!--    <script src="../src/js/navigation.js"></script>-->
-<!--    <script src="../src/js/formManager.js"></script>-->
-<!--    <script src="../src/js/randomFacts.js"></script>-->
-<!--    <script src="../src/js/sendForm.js"></script>-->
-<!--    <script src="../src/js/main.js"></script>-->
-<!--    <script src="../src/js/fluid.js"></script>-->
-<!--    <script src="../src/js/back-btn.js"></script>-->
-
 </body>
 </html>
