--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
             <div class="container">
                 <h2>Мои работы</h2>
 
-                <p>Так как в компании "EvoPlay" я подписал NDA(договор о неразглашении) мне придётся сюда выложить свои курсовые работы</p>
+                <p>Так как в компаниях в которых я работал я подписал NDA(договор о неразглашении) мне придётся сюда выложить свои курсовые работы</p>
                 <br/>
                 <ul class="wrapper"></ul>
             </div>
@@ -327,7 +327,7 @@
                     >
                         <svg><use xlink:href="#github"></use></svg>
                     </a>
-                    <a href="https://www.instagram.com/oivangolovko/"
+                    <a href="https://www.instagram.com/oivanholovko/"
                        class="social-link instagram"
                        title="link to instagram profile"
                     >
@@ -464,7 +464,6 @@
             </div>
             <div class="progress">Подождите немного, идёт загрузка: <span data-progress>0%</span></div>
         </section>
-
     </div>
 </body>
 </html>
